--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,7 @@ input[type="radio"]:checked {
     100% {visibility: visible;}    
 }
 /*
-* carousel
+* carousel  Adapted in part from https://css-tricks.com/css-only-carousel/
 */
 .carousel {
     position: relative;
