--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,24 @@ input[type="radio"] {
 input[type="radio"]:checked {
     box-shadow:0 0 0 2px var(--color-brand-orange);
 }
+.button-chat {
+    background-color: black;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 6px, rgba(0, 0, 0, 0.2) 0px 4px 16px;
+}
+.button-chat:hover {
+    width: 65px;
+    height: 65px;
+    transition: ease-in-out;
+}
 /*
 * page-header
 */
