--- a/components/index.html
+++ b/components/index.html
@@ -106,6 +106,113 @@
                 </nav>
             </div>
         </article>
+
+        <article class="languages">
+            <h3 class="component__name">language-picker</h3>
+            <div class="component__image">
+                <img src="imb/languages" alt="languages" >
+            </div>
+            <div class="component__code">
+                <div class="language-picker">
+                    <ul class="language-picker__regions">
+                        <li class="region">
+                            North America
+                            <ul class="nations">
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/united-states_0_1.png" alt="United States" >
+                                    <div>
+                                        United States
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">English</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/canada_0.png" alt="Canada" >
+                                    <div>
+                                        Canada
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">English</a></li>
+                                            <li class="language"><a href="#!">Français</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="region">
+                            Europe
+                            <ul class="nations">
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/germany_0_0_0.png" alt="Deutschland" >
+                                    <div>
+                                        Deutschland
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Deutsch</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/spain_0.png" alt="España" >
+                                    <div>
+                                        España
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Español</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/france_0_1.png" alt="France" >
+                                    <div>
+                                        France
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Français</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/italy_0.png" alt="Italia" >
+                                    <div>
+                                        Italia
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Italiano</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/netherlands_0_1.png" alt="Nederland" >
+                                    <div>
+                                        Nederland
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Nederlands</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/switzerland_0_0.png" alt="Switzerland" >
+                                    <div>
+                                        Switzerland
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Deutsch</a></li>
+                                            <li class="language"><a href="#!">Français</a></li>
+                                            <li class="language"><a href="#!">English</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nation">
+                                    <img src="https://livewire.prod.acquia-sites.com/sites/default/files/market-icons/united-kingdom_0_1.png" alt="United Kingdom" >
+                                    <div>
+                                        United Kingdom
+                                        <ul class="languages">
+                                            <li class="language"><a href="#!">Enlish</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </article>
         
         <article class="component">
             <h3 class="component__name">banner</h3>
