Adding sub-menu component

--- a/components/index.html
+++ b/components/index.html
@@ -107,6 +107,46 @@
             </div>
         </article>
 
+        <article class="component">
+            <h3 class="component__name">nav-main__sub-menu</h3>
+            <div class="component__image">
+                <img src="img/nav-main__sub-menu.png" alt="Main Navigation Sub-menu" >
+            </div>
+            <div class="component__code">
+                <div class="nav-main__sub-menu">
+                    <ol class="sub-menu__categories">
+                        <li class="sub-menu__category">
+                            <a href="#faqs">FAQS</a>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </li>
+                        <li class="sub-menu__category sub-menu__category--active">
+                            <a href="#app-info">App Info</a>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </li>
+                        <li class="sub-menu__category">
+                            <a href="#resources">Resources</a>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </li>
+                    </ol>
+                    <div class="sub-menu__panel" >
+                        <ul class="app-list">
+                            <li class="app-list__app">
+                                <a href="#!" title="LiveWire S2 App">
+                                    <img src="https://livewire.widen.net/content/upk0bckcvy/web/lw-logo-megamenu-2.png?w=140&crop=yes" alt="LiveWire S2">
+                                    <p>LiveWire S2</p> 
+                                </a>
+                            </li>
+                            <li class="app-list__app">
+                                <a href="#!" title="LiveWire ONE">
+                                        <img src="https://livewire.widen.net/content/ormmxnfzot/web/lw-logo-megamenu-1.png?w=140&crop=yes" alt="LiveWire ONE">
+                                        <p>LiveWire ONE</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </article>
         <article class="languages">
             <h3 class="component__name">language-picker</h3>
             <div class="component__image">
