Updating nav-main

--- a/components/index.html
+++ b/components/index.html
@@ -69,10 +69,22 @@
                     </div>
                     <nav class="nav-main large">
                         <ul>
-                            <li>motorcycles <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg></li>
-                            <li>experience <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg></li>
-                            <li>support <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg></li>
-                            <li>shop <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg></li>
+                            <li class="dropdown">
+                                <span>motorcycles</span>
+                                <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                            </li>
+                            <li class="dropdown">
+                                <span>experience</span>
+                                <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                            </li>
+                            <li class="dropdown">
+                                <span>support</span>
+                                <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                            </li>
+                            <li class="dropdown">
+                                <span>shop</span>
+                                <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                            </li>
                         </ul>
                     </nav>
                     <div class="nav-bar">
@@ -98,10 +110,22 @@
             <div class="component__code">
                 <nav class="nav-main">
                     <ul>
-                        <li>motorcycles</li>
-                        <li>experience</li>
-                        <li>support</li>
-                        <li>shop</li>
+                        <li class="dropdown">
+                            <span>motorcycles</span>
+                            <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                        </li>
+                        <li class="dropdown">
+                            <span>experience</span>
+                            <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                        </li>
+                        <li class="dropdown">
+                            <span>support</span>
+                            <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                        </li>
+                        <li class="dropdown">
+                            <span>shop</span>
+                            <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -147,6 +171,7 @@
                 </div>
             </div>
         </article>
+
         <article class="languages">
             <h3 class="component__name">language-picker</h3>
             <div class="component__image">
