--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,7 @@ input[type="radio"]:checked {
     text-align: center;
     display: relative;
     padding: 1rem 0;
+    margin: 0;
 }
 .banner a {
     color: var(--color-black);
