--- a/components/index.html
+++ b/components/index.html
@@ -681,7 +681,7 @@
             </h3>
             <div class="component__code">
                 <section class="media-section">
-                    <video playsinline="" class="Video_video__9h5Ot" poster="https://livewire.widen.net/content/jpct9rfbog/web/home-page-2.0-video-poster.jpg" autoplay="" loop="">
+                    <video playsinline="" class="Video_video__9h5Ot" poster="https://livewire.widen.net/content/jpct9rfbog/web/home-page-2.0-video-poster.jpg" autoplay="" loop="" muted="" controls="">
                         <source src="https://livewire.widen.net/content/2iufgdei87/mp4/230181_BrandHP_v02_PR422_mov_web_265.mp4" >
                     </video>
                     <a href="#!" class="button">See Our Vision</a>
