--- a/css/main.css
+++ b/css/main.css
@@ -293,6 +293,7 @@ input[type="radio"]:checked {
     left: 0;
     color: var(--color-nimbus-gray);
     padding-top: 5rem;
+    display: none;
 }
 .language-picker__header {
     display: relative;
@@ -357,6 +358,14 @@ input[type="radio"]:checked {
 .language-picker .language a:hover {
     border-bottom: 1px solid var(--color-nimbus-gray);
 }
+.nav-bar__langage-switcher:hover + .language-picker,
+.language-picker:hover {
+    visibility: visible;
+    display: block;
+    position: absolute;
+    right: 0;
+}
+
 /*
 * banner 
 */
