--- a/css/main.css
+++ b/css/main.css
@@ -280,7 +280,9 @@ input[type="radio"]:checked {
 }
 .sub-menu__panel {
     visibility: hidden;
+    background-color: var(--color-white);
 }
+
 /* 
 * language-picker
 */
@@ -947,7 +949,7 @@ input[type="radio"]:checked {
         border-bottom: 1px solid var(--color-gray-dark);
     }
     .sub-menu__category--active {
-        background-color: var(--color-gray);
+        background-color: var(--color-white);
     }
     .sub-menu__category--active a {
         color: var(--color-black);
@@ -962,6 +964,22 @@ input[type="radio"]:checked {
         visibility: visible;
         display: grid;
         grid-template-columns: 1fr;
+    }
+    .dropdown .nav-main__sub-menu {
+        justify-self: unset;
+        position: absolute;
+        top: -2000rem;
+        left: 0;
+        right: 0;
+        visibility: hidden;
+    }
+    .dropdown:hover > .nav-main__sub-menu,
+    .nav-main__sub-menu:hover {
+        top: 3.5rem;
+        left: 0;
+        right: 0;
+        visibility: visible;
+        height: auto;
     }
     .app-list {
         display: flex;
