--- a/css/main.css
+++ b/css/main.css
@@ -965,7 +965,7 @@ input[type="radio"]:checked {
         display: grid;
         grid-template-columns: 1fr;
     }
-    .sub-menu__panel--locations {
+    .sub-menu__panel--card {
         display: grid;
         grid-template-columns: 1fr;
         align-items: center;
