--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,9 @@ input[type="radio"]:checked {
     height: 4rem;
     text-transform: uppercase;
     font-size: .82rem;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 .nav-bar,
 .nav-bar__menu,
